<resources>
    <string name="app_name">GitIssues</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_user">Welcome User</string>
    <string name="checking_account">Checking Account</string>
    <string name="_1234">**** 1234</string>
    <string name="available_balance">Available Balance</string>
    <string name="_5_234_56">$5,234.56</string>
    <string name="savings_account">Savings Account</string>
    <string name="_5678">**** 5678</string>
    <string name="_12_890_23">$12,890.23</string>
    <string name="recent_transactions">Recent Transactions</string>
</resources>